--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: Byung-Cheol Cho
-description: Princeton 2018
+description: "Princeton University<br>
+    Electrical Engineering, Class of 2018<br>
+    Princeton Neuroscience Institute"
