--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
 theme: jekyll-theme-minimal
-title: Byung-Cheol Cho
-description: "Princeton University<br>
-    Electrical Engineering, Class of 2018<br>
-    Princeton Neuroscience Institute"
+title: Byung-Cheol (BC) Cho
+description: "HRT AI Labs"
