--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Byung-Cheol (BC) Cho
-description: "HRT AI Labs"
+description: "<a href='linkedin.com/in/bccho'>LinkedIn</a>"
